[package]
name = "dronegowski"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["debug", "serialize"] }
rustastic-drone = { git = "https://github.com/Rustastic/RustasticDrone.git" }
#flypath
rolling_drone = { git = "https://github.com/giorebecchi/RollingDrone.git" }
lockheedrustin-drone = { git = "https://github.com/Lockheed-Rustin/drone.git" }
rusty_drones = { git = "https://github.com/matteo-dinoia/rusty-drones.git", branch = "main" }
#RustBuster
skylink = { git = "https://github.com/Suge42/Skylink_drone.git" }
#Bry_w_locie
#null pointer
#rust do itca
toml = "0.8.19"
crossbeam-channel = "0.5.13"
rand = "0.9.0-beta.1"
thiserror = "2.0.3"
log = "0.4.22"

[features]
default = []  # Feature predefinita, può essere vuota
debug = []    # Definizione della feature "debug"